--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,7 +10,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "first ",
-  "main": "server.js",
+  "main": "node server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
