--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
   "description": "first ",
   "main": "server.js",
   "scripts": {
+    "start":"node server.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
